Add new files and update requirements.txt
Co-authored-by: Luca Sorace "Stranck" <stranck@users.noreply.github.com>
Co-authored-by: Tommaso-Sgroi <Tommaso-Sgroi@users.noreply.github.com>

--- a/conf/oracle_config.yaml
+++ b/conf/oracle_config.yaml
@@ -6,6 +6,7 @@ poll_interval: 1
 defaults:
   - _self_
   - hydra: defaults
-  - model: sdxl-turbo
   - provider: httpprovider
   - contract: data
+  - ipfs: ipfs_config
+  - model: sdxl-turbo
