Fixed the tracker and added the implementation of the transfer for the oracle. Modified the js script that interacts with the blockchain.
Co-authored-by: Tommaso-Sgroi <Tommaso-Sgroi@users.noreply.github.com>

--- a/.hydra/hydra.yaml
+++ b/.hydra/hydra.yaml
@@ -113,12 +113,12 @@ hydra:
     - hydra.mode=RUN
     task: []
   job:
-    name: tracker
+    name: oracle
     chdir: null
     override_dirname: ''
     id: ???
     num: ???
-    config_name: tracker_config
+    config_name: oracle_config
     env_set: {}
     env_copy: []
     config:
@@ -142,6 +142,8 @@ hydra:
       provider: schema
     output_dir: /home/andrea/Documenti/Computer Science/Blockchain/project/MetaFusion
     choices:
+      model: sdxl-turbo
+      db: sqlite
       ipfs: ipfs_config
       contract: data
       provider: httpprovider
