--- a/.hydra/config.yaml
+++ b/.hydra/config.yaml
@@ -10,3 +10,10 @@ contract:
   contract_address: MetaFusionPresident
 ipfs:
   peer: /ip4/0.0.0.0/tcp/5001
+db:
+  _target_: sqlite3.connect
+  database: tracker.db
+model:
+  _target_: diffusers.AutoPipelineForText2Image.from_pretrained
+  pretrained_model_or_path: stabilityai/sdxl-turbo
+  cache_dir: ./cache/models/
