--- a/conf/model/sdxl-turbo.yaml
+++ b/conf/model/sdxl-turbo.yaml
@@ -1,3 +1,5 @@
-_target_: "diffusers.AutoPipelineForText2Image.from_pretrained"
-pretrained_model_or_path: "stabilityai/sdxl-turbo"
-cache_dir: "./cache/models/"
+from_pretrained:
+  _target_: "diffusers.AutoPipelineForText2Image.from_pretrained"
+  pretrained_model_or_path: "stabilityai/sdxl-turbo"
+  cache_dir: "./cache/models/"
+device: "cuda"
